src/test/deca/syntax/valid/parser/oracle/class_with_block_one_param.deca
class A{
    int f(boolean b){
        int i = 0;
        if(b){print(i);
        } else {
        return 1;
        }
    }
}
{}