src/test/deca/syntax/invalid/parser/oracle/while_with_decl_inside.deca
{
	while(1){int i = 0;}
}
